# advent-of-code

./: README.md  project.clj
src/advent_of_code/: aoc_2018_day1.clj  aoc_2018_day2.clj  aoc_2018_day3.clj  aoc_2018_day4.clj  aoc_2018_day5.clj  aoc_2018_day6.clj
year2015/: project.clj
year2015/src/year2015/: core.clj  day1.clj  day2.clj  day3.clj  day4.clj
year2016/: Makefile
year2016/day1/: day1.c
year2020/aoc-clj/: project.clj
year2020/cpp/: common.h  day1.cpp  day2.cpp  day3.cpp
year2021/: Cargo.toml
year2021/src/: lib.rs  main.rs
year2022/: dune-project
year2022/data/: day9.txt
year2022/lib/: common.ml  dune
year2023/aoc-clj/: build.clj  deps.edn
year2024/: .gitignore  go.mod  main.go  main_test.go
year2024/day1/: day1.go
year2024/day10/: day10.go
year2024/day11/: day11.go
year2024/day12/: day12.go
year2024/day13/: day13.go
year2024/day14/: day14.go
year2024/day18/: day18.go
year2024/day19/: day19.go
year2024/day2/: day2.go
year2024/day23/: day23.go
year2024/day24/: day24.go
year2024/day25/: day25.go
year2024/day3/: day3.go
year2024/day4/: day4.go
year2024/day5/: day5.go
year2024/day6/: day6.go
year2024/day7/: day7.go
year2024/day8/: day8.go
year2024/day9/: day9.go
year2024/util/: util.go
year2025/day1/: day1.factor
year2025/day10/: day10.factor
year2025/day11/: day11.factor
year2025/day2/: day2.factor
year2025/day3/: day3.factor
year2025/day4/: day4.factor
year2025/day5/: day5.factor
year2025/day6/: day6.factor
year2025/day7/: day7.factor
year2025/day8/: day8.factor
(+46 files in other folders)
